Fixes #1135 - The buttons on Advanced Integrate editor are too close to the Config box
Also updating font size on custom buttons to match new styling.

--- a/AzureFunctions.AngularClient/src/app/function-integrate/function-integrate.component.scss
+++ b/AzureFunctions.AngularClient/src/app/function-integrate/function-integrate.component.scss
@@ -3,6 +3,7 @@
 h2.dev-block-header{
     display: inline;
     @extend .text-level1-heading;
+    line-height: 29px;
 }
 
 div.dev-block-header{
