--- a/AzureFunctions.AngularClient/src/app/function-keys/function-keys.component.scss
+++ b/AzureFunctions.AngularClient/src/app/function-keys/function-keys.component.scss
@@ -3,7 +3,7 @@
 .title {
     @extend .text-label;
     font-weight: bold;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 .wrapper {
