--- a/AzureFunctions.AngularClient/src/app/function-manage/function-manage.component.css
+++ b/AzureFunctions.AngularClient/src/app/function-manage/function-manage.component.css
@@ -46,7 +46,7 @@ pre {
     margin-left: 15px;
     display: inline;
     padding: 6px 25px 6px 25px;
-    font-size: 14px;
+    font-size: 12px;
     cursor: pointer;
     background-image: none;
     border: 1px solid transparent;
